Course Finder IO Update 2

--- a/src/mathsmate/CourseFinder.form
+++ b/src/mathsmate/CourseFinder.form
@@ -55,6 +55,9 @@
           <Dimension value="[400, 640]"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="mainMenuPanelMouseEntered"/>
+      </Events>
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout">
         <Property name="useNullLayout" type="boolean" value="true"/>
