problem getting images to change

--- a/src/mathsmate/AlgebraFormulaAdmin.form
+++ b/src/mathsmate/AlgebraFormulaAdmin.form
@@ -240,7 +240,7 @@
                       <Component id="title4Field" min="-2" pref="25" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="formula4Field" min="-2" pref="25" max="-2" attributes="0"/>
-                      <EmptySpace pref="22" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
