Finished NotesAlgebra FileIO

--- a/src/mathsmate/NotesAlgerbra.form
+++ b/src/mathsmate/NotesAlgerbra.form
@@ -226,7 +226,7 @@
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="20" y="530" width="-1" height="-1"/>
+              <AbsoluteConstraints x="40" y="530" width="90" height="-1"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -239,20 +239,20 @@
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="280" y="530" width="-1" height="-1"/>
+              <AbsoluteConstraints x="290" y="530" width="80" height="-1"/>
             </Constraint>
           </Constraints>
         </Component>
         <Component class="javax.swing.JButton" name="jButton3">
           <Properties>
-            <Property name="text" type="java.lang.String" value="add Notes"/>
+            <Property name="text" type="java.lang.String" value="Add Notes"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="140" y="530" width="110" height="-1"/>
+              <AbsoluteConstraints x="160" y="530" width="100" height="-1"/>
             </Constraint>
           </Constraints>
         </Component>
